# VScode-rust_app

./: .gitignore  Cargo.toml  README.md  dhjc_config.toml
logs/: 2025-12-11.txt  2025-12-12.txt
src/: dhjc_core.rs  main.rs
