[package]
name = "dhjc_rust_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI 框架：eframe + egui
eframe = "0.33"

# 串口
serialport = "4"

# 时间（用于日志时间戳）
chrono = { version = "0.4", features = ["clock"] }

# 配置文件 dhjc_config.toml
serde = { version = "1", features = ["derive"] }
toml = "0.8"
egui_plot = { path = "vendor/egui_plot", version = "0.33" }
